# melon

./: AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
assets/demo/: demo.mov
benches/: perf.rs
docs/: architecture.md
specs/: awk.json  brew.json  cargo.json  cat.json  cd.json  chmod.json  claude.json  curl.json  docker.json  env.json  find.json  gh.json  git.json  go.json  grep.json  head.json  jq.json  kill.json  kubectl.json  ls.json  make.json  man.json  npm.json  pip.json  python3.json  rsync.json  sed.json  sort.json  ssh.json  tail.json  tar.json  tmux.json  uniq.json  wc.json  wget.json  which.json
src/: config.rs  lib.rs  main.rs
src/completion/: engine.rs  generator.rs  loader.rs  matcher.rs  mod.rs  source.rs  spec.rs
src/input/: line.rs  mod.rs  parser.rs  trigger.rs
src/pty/: mod.rs  proxy.rs  signals.rs
src/shell/: cursor.rs  detect.rs  escape.rs  mod.rs
src/ui/: popup.rs  render.rs  theme.rs
tasks/: todo.md
tests/: integration.rs
tools/: convert_specs.ts
